# opnsense-py

./: CLAUDE.md  pyproject.toml
.github/workflows/: workflow.yaml
docs/: cli.rst  conf.py  contributing.rst  index.rst  installation.rst  library.rst  modules_overview.rst  requirements.txt
docs/api/: modules.rst
opnsense_py/: client.py
opnsense_py/cli/: __init__.py  context.py  main.py  utils.py
opnsense_py/cli/commands/: auth.py  captiveportal.py  cron.py  dhcrelay.py  diagnostics.py  dnsmasq.py  firewall.py  firmware.py  haproxy.py  hostdiscovery.py  ids.py  ipsec.py  kea.py  monit.py  ntpd.py  openvpn.py  radvd.py  routes.py  routing.py  syslog.py  system.py  trafficshaper.py  trust.py  unbound.py  wireguard.py
opnsense_py/models/: base.py
opnsense_py/modules/: base.py
opnsense_py/modules/core/: cron.py
tests/unit/: test_models.py
tests/unit/cli/: conftest.py  test_cron_cmds.py
tests/unit/modules/core/: test_firewall.py  test_unbound.py
