[project]
name = "opnsense-py"
version = "0.1.2"
description = "Python wrapper for the OPNsense REST API"
authors = [{name = "Justin Refi", email = "justinrefi@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12.0",
    "tabulate>=0.9.0",
]

[project.scripts]
opn = "opnsense_py.cli.main:app"
opnsense = "opnsense_py.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "typer>=0.12.0",
    "tabulate>=0.9.0",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-markdown-builder>=0.6.10",
    "sphinx-sitemap>=2.9.0",
    "sphinx-tabs>=3.5.0",
    "blockdiag>=2.0.0",
    "nwdiag>=2.0.0",
    "seqdiag>=2.0.0",
    "actdiag>=2.0.0",
    "sphinxcontrib-blockdiag>=3.0.0",
    "sphinxcontrib-nwdiag>=2.0.0",
    "sphinxcontrib-seqdiag>=3.0.0",
    "sphinxcontrib-actdiag>=3.0.0",
    "blockdiagcontrib-cisco>=0.1.8",
    "pillow>=12.1.1",
    "ply>=3.11",
    "sphinx-rtd-theme>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opnsense_py"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = ["integration: requires live OPNsense instance"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
